@@ -1,8 +1,8 @@
 .ig
-Copyright (C) 2002-10 Bruce Allen <smartmontools-support@lists.sourceforge.net>
-Copyright (C) 2004-15 Christian Franke <smartmontools-support@lists.sourceforge.net>
+Copyright (C) 2002-10 Bruce Allen
+Copyright (C) 2004-15 Christian Franke
 
-$Id: smartctl.8.in 4056 2015-04-15 20:40:45Z chrfranke $
+$Id: smartctl.8.in 4068 2015-04-24 19:35:00Z chrfranke $
 
 This program is free software; you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
@@ -2184,52 +2184,21 @@ once by \fBsmartctl\fP for each initiator for each activation of the
 condition.
 
 .SH AUTHORS
-\fBBruce Allen\fP
+\fBBruce Allen\fP (project initiator),
 .br
-University of Wisconsin \- Milwaukee Physics Department
+\fBChristian Franke\fP (project manager, Windows port and all sort of things),
 .br
-\fBChristian Franke\fP (Windows interface, C++ redesign, most enhancements
-since 2009)
+\fBDouglas Gilbert\fP (SCSI subsystem),
+.br
+\fBGabriele Pohl\fP (wiki & development team support),
+.br
+\fBAlex Samorukov\fP (FreeBSD port and more, new Trac wiki).
 
-The following have made large contributions to smartmontools:
-.br
-\fBCasper Dik\fP (Solaris SCSI interface)
-.br
-\fBDouglas Gilbert\fP (SCSI subsystem)
-.br
-\fBGuido Guenther\fP (Autoconf/Automake packaging)
-.br
-\fBGeoffrey Keating\fP (Darwin ATA interface)
-.br
-\fBEduard Martinescu\fP (FreeBSD interface)
-.br
-\fBFr\['e]d\['e]ric L. W. Meunier\fP (Web site and Mailing list)
-.br
-\fBGabriele Pohl\fP (Web site and Wiki, conversion from CVS to SVN)
-.br
-\fBKeiji Sawada\fP (Solaris ATA interface)
-.br
-\fBManfred Schwarb\fP (Drive database)
-.br
-\fBSergey Svishchev\fP (NetBSD interface)
-.br
-\fBDavid Snyder and Sergey Svishchev\fP (OpenBSD interface)
-.br
-\fBPhil Williams\fP (User interface and drive database)
-.br
-\fBYuri Dario\fP (OS/2, eComStation interface)
-.br
-\fBShengfeng Zhou\fP (Linux/FreeBSD HighPoint RocketRAID interface)
-.br
-Many other individuals have made smaller contributions and corrections.
+Many other individuals have made contributions and corrections,
+see AUTHORS, ChangeLog and repository files.
 
 The first smartmontools code was derived from the smartsuite package,
-written by Michael Cornwell, and from the previous UCSC smartsuite package.
-This code was originally developed as a
-Senior Thesis by Michael Cornwell at the Concurrent Systems Laboratory
-(now part of the Storage Systems Research Center), Jack Baskin School
-of Engineering, University of California, Santa
-Cruz. \fBhttp://ssrc.soe.ucsc.edu/\fP .
+written by Michael Cornwell and Andre Hedrick.
 
 .SH REPORTING BUGS
 To submit a bug report, create a ticket in smartmontools wiki:
@@ -2268,4 +2237,4 @@ Links to these and other documents may be found on the Links page of the
 .SH PACKAGE VERSION
 CURRENT_SVN_VERSION CURRENT_SVN_DATE CURRENT_SVN_REV
 .br
-$Id: smartctl.8.in 4056 2015-04-15 20:40:45Z chrfranke $
+$Id: smartctl.8.in 4068 2015-04-24 19:35:00Z chrfranke $
